Add individual JS file for each HTML page

--- a/1980s.html
+++ b/1980s.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eric's Movie Trivia Game</title>
-    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -29,8 +28,8 @@
 
 <main>
 
-
 </main>
+<script src="js/80s-movies.js"></script>
 
 </body>
 </html>
