Added images into HTML

--- a/1980s.html
+++ b/1980s.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eric's Movie Trivia Game</title>
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
 
 <!-- Create a Navigation Menu -->
-<header>
-    <div class="container">
-
+<div class="header-container">
+    <header>
         <img src="img/Hollywood-Sign.jpg" alt="backdrop" class="backdrop">
 
         <nav>
@@ -22,9 +22,8 @@
                 <li><a href="2000s.html">2000's Movies</a></li>
             </ul>
         </nav>
-
-    </div>
-</header>
+    <header>
+</div>
 
 <main>
 
