--- a/1990s.html
+++ b/1990s.html
@@ -10,9 +10,8 @@
 <body>
 
 <!-- Create a Navigation Menu -->
-<header>
-    <div class="container">
-
+<div class="header-container">
+    <header>
         <img src="img/Hollywood-Sign.jpg" alt="backdrop" class="backdrop">
 
         <nav>
@@ -23,9 +22,8 @@
                 <li><a href="2000s.html">2000's Movies</a></li>
             </ul>
         </nav>
-
-    </div>
-</header>
+    <header>
+</div>
 
 <main>
     
