--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 <body>
 
 <!-- Create a Navigation Menu -->
-<header>
-    <div class="container">
-
+<div class="header-container">
+    <header>
         <img src="img/Hollywood-Sign.jpg" alt="backdrop" class="backdrop">
 
         <nav>
@@ -23,12 +22,47 @@
                 <li><a href="2000s.html">2000's Movies</a></li>
             </ul>
         </nav>
-
-    </div>
-</header>
+    <header>
+</div>
 
 <main>
 
+<!-- Main Body -->
+    <h1>1980's Films</h1>
+    <ul>
+        <li><img src="img/Airplane.jpeg" alt="Airplane!"></li>
+        <li><img src="img/The-Blues-Brothers.jpg" alt="The Blues Brothers"></li>
+        <li><img src="img/First-Blood.jpg" alt="First Blood"></li>
+        <li><img src="img/RockyIII.jpg" alt="Rocky III"></li>
+        <li><img src="img/Scarface.jpg" alt="Scarface"></li>
+        <li><img src="img/WarGames.jpg" alt="WarGames"></li>
+        <li><img src="img/Die-Hard.jpg" alt="Die Hard"></li>
+        <li><img src="img/Who-Framed-Roger-Rabbit.jpg" alt="Who Framed Roger Rabbit"></li>
+    </ul>
+
+    <h1>1990's Films</h1>
+    <ul>
+        <li><img src="img/Home-Alone.jpg" alt="Home Alone"></li>
+        <li><img src="img/Pretty-Woman.jpg" alt="Pretty Woman"></li>
+        <li><img src="img/Forrest-Gump.jpg" alt="Forrest Gump"></li>
+        <li><img src="img/The-Lion-King.jpg" alt="The Lion King"></li>
+        <li><img src="img/Jumanji.jpg" alt="Jumanji"></li>
+        <li><img src="img/Toy-Story.jpg" alt="Toy Story"></li>
+        <li><img src="img/The-Matrix.jpg" alt="The Matrix"></li>
+        <li><img src="img/The-Mummy.jpg" alt="The Mummy"></li>
+    </ul>
+
+    <h1>2000's Films</h1>
+    <ul>
+        <li><img src="img/HP-Stone.jpg" alt="Harry Potter and the Sorcerer's Stone"></li>
+        <li><img src="img/LOTR-Fellowship.jpg" alt="The Lord of the Rings: The Fellowship of the Ring"></li>
+        <li><img src="img/HP-Chamber.jpg" alt="Harry Potter and the Chamber of Secrets"></li>
+        <li><img src="img/LOTR-Two-Towers.jpeg" alt="The Lord of the Rings: The Two Towers"></li>
+        <li><img src="img/Casino-Royale.jpg" alt="Casino Royale"></li>
+        <li><img src="img/The-Departed.jpg" alt="The Departed"></li>
+        <li><img src="img/The-Dark-Knight.jpg" alt="The Dark Knight"></li>
+        <li><img src="img/Iron-Man.jpg" alt="Iron Man"></li>
+    </ul>
 
 </main>
 
