--- a/index.html
+++ b/index.html
@@ -10,61 +10,77 @@
 <body>
 
 <!-- Create a Navigation Menu -->
-<div class="header-container">
-    <header>
-        <img src="img/Hollywood-Sign.jpg" alt="backdrop" class="backdrop">
+<nav class="header">
+    <h1>Eric's Movie Trivia Game</h1>
+    <ul class="navbar">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="1980s.html">1980's Movies</a></li>
+        <li><a href="1990s.html">1990's Movies</a></li>
+        <li><a href="2000s.html">2000's Movies</a></li>
+    </ul>
+</nav>
 
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="1980s.html">1980's Movies</a></li>
-                <li><a href="1990s.html">1990's Movies</a></li>
-                <li><a href="2000s.html">2000's Movies</a></li>
-            </ul>
-        </nav>
-    <header>
-</div>
+<header class="background">
+<!-- Create a Navigation Menu -->
+</header>
+
 
 <main>
-
 <!-- Main Body -->
-    <h1>1980's Films</h1>
-    <ul>
-        <li><img src="img/Airplane.jpeg" alt="Airplane!"></li>
-        <li><img src="img/The-Blues-Brothers.jpg" alt="The Blues Brothers"></li>
-        <li><img src="img/First-Blood.jpg" alt="First Blood"></li>
-        <li><img src="img/RockyIII.jpg" alt="Rocky III"></li>
-        <li><img src="img/Scarface.jpg" alt="Scarface"></li>
-        <li><img src="img/WarGames.jpg" alt="WarGames"></li>
-        <li><img src="img/Die-Hard.jpg" alt="Die Hard"></li>
-        <li><img src="img/Who-Framed-Roger-Rabbit.jpg" alt="Who Framed Roger Rabbit"></li>
-    </ul>
+    <div class="intro">
+        <br><h2>Can you guess which film made more at the box office?<br><br>
+            Choose a decade below and see how well you remember your movies!
+        </h2><br>
+    </div>
 
-    <h1>1990's Films</h1>
-    <ul>
-        <li><img src="img/Home-Alone.jpg" alt="Home Alone"></li>
-        <li><img src="img/Pretty-Woman.jpg" alt="Pretty Woman"></li>
-        <li><img src="img/Forrest-Gump.jpg" alt="Forrest Gump"></li>
-        <li><img src="img/The-Lion-King.jpg" alt="The Lion King"></li>
-        <li><img src="img/Jumanji.jpg" alt="Jumanji"></li>
-        <li><img src="img/Toy-Story.jpg" alt="Toy Story"></li>
-        <li><img src="img/The-Matrix.jpg" alt="The Matrix"></li>
-        <li><img src="img/The-Mummy.jpg" alt="The Mummy"></li>
-    </ul>
+    <div class="main">
+        <div class="container eighties">
+            <h1><a href="1980s.html">1980's Movies</a></h1>
+            <ul class="images-container">
+                <li><img src="img/Airplane.jpeg" alt="Airplane!"></li>
+                <li><img src="img/The-Blues-Brothers.jpg" alt="The Blues Brothers"></li>
+                <li><img src="img/First-Blood.jpg" alt="First Blood"></li>
+                <li><img src="img/RockyIII.jpg" alt="Rocky III"></li>
+                <li><img src="img/Scarface.jpg" alt="Scarface"></li>
+                <li><img src="img/WarGames.jpg" alt="WarGames"></li>
+                <li><img src="img/Die-Hard.jpg" alt="Die Hard"></li>
+                <li><img src="img/Who-Framed-Roger-Rabbit.jpg" alt="Who Framed Roger Rabbit"></li>
+            </ul>
+        </div>
 
-    <h1>2000's Films</h1>
-    <ul>
-        <li><img src="img/HP-Stone.jpg" alt="Harry Potter and the Sorcerer's Stone"></li>
-        <li><img src="img/LOTR-Fellowship.jpg" alt="The Lord of the Rings: The Fellowship of the Ring"></li>
-        <li><img src="img/HP-Chamber.jpg" alt="Harry Potter and the Chamber of Secrets"></li>
-        <li><img src="img/LOTR-Two-Towers.jpeg" alt="The Lord of the Rings: The Two Towers"></li>
-        <li><img src="img/Casino-Royale.jpg" alt="Casino Royale"></li>
-        <li><img src="img/The-Departed.jpg" alt="The Departed"></li>
-        <li><img src="img/The-Dark-Knight.jpg" alt="The Dark Knight"></li>
-        <li><img src="img/Iron-Man.jpg" alt="Iron Man"></li>
-    </ul>
+        <div class="container nineties">
+            <h1><a href="1990s.html">1990's Movies</a></h1>
+            <ul class="images-container">
+                <li><img src="img/Home-Alone.jpg" alt="Home Alone"></li>
+                <li><img src="img/Pretty-Woman.jpg" alt="Pretty Woman"></li>
+                <li><img src="img/Forrest-Gump.jpg" alt="Forrest Gump"></li>
+                <li><img src="img/The-Lion-King.jpg" alt="The Lion King"></li>
+                <li><img src="img/Jumanji.jpg" alt="Jumanji"></li>
+                <li><img src="img/Toy-Story.jpg" alt="Toy Story"></li>
+                <li><img src="img/The-Matrix.jpg" alt="The Matrix"></li>
+                <li><img src="img/The-Mummy.jpg" alt="The Mummy"></li>
+            </ul>
+        </div>
 
+        <div class="container aughts">
+            <h1><a href="2000s.html">2000's Movies</a></h1>
+            <ul class="images-container">
+                <li><img src="img/HP-Stone.jpg" alt="Harry Potter and the Sorcerer's Stone"></li>
+                <li><img src="img/LOTR-Fellowship.jpg" alt="The Lord of the Rings: The Fellowship of the Ring"></li>
+                <li><img src="img/HP-Chamber.jpg" alt="Harry Potter and the Chamber of Secrets"></li>
+                <li><img src="img/LOTR-Two-Towers.jpg" alt="The Lord of the Rings: The Two Towers"></li>
+                <li><img src="img/Casino-Royale.jpg" alt="Casino Royale"></li>
+                <li><img src="img/The-Departed.jpg" alt="The Departed"></li>
+                <li><img src="img/The-Dark-Knight.jpg" alt="The Dark Knight"></li>
+                <li><img src="img/Iron-Man.jpg" alt="Iron Man"></li>
+            </ul>
+        </div>
+    </div>
 </main>
+
+<footer class="footer">
+    <h3>&copy;2020 Eric's Movie Trivia Game</h3>
+</footer>
 
 </body>
 </html>
