--- a/1980s.html
+++ b/1980s.html
@@ -10,24 +10,33 @@
 <body>
 
 <!-- Create a Navigation Menu -->
-<div class="header-container">
-    <header>
-        <img src="img/Hollywood-Sign.jpg" alt="backdrop" class="backdrop">
+<nav class="header">
+    <h1>Eric's Movie Trivia Game</h1>
+    <ul class="navbar">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="1980s.html">1980's Movies</a></li>
+        <li><a href="1990s.html">1990's Movies</a></li>
+        <li><a href="2000s.html">2000's Movies</a></li>
+    </ul>
+</nav>
 
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="1980s.html">1980's Movies</a></li>
-                <li><a href="1990s.html">1990's Movies</a></li>
-                <li><a href="2000s.html">2000's Movies</a></li>
-            </ul>
-        </nav>
-    <header>
-</div>
+<header class="background">
+<!-- Create a Navigation Menu -->
+</header>
 
-<main>
+<summary>
+    <!--Show user score here-->
+</summary>
+
+<!-- Main Body -->
+<main class="main-content">
 
 </main>
+
+<footer class="footer">
+    <h3>&copy;2020 Eric's Movie Trivia Game</h3>
+</footer>
+
 <script src="js/80s-movies.js"></script>
 
 </body>
