minor grammar changes

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     </ul>
 </nav>
 
+<!-- Create a background -->
 <header class="background">
-<!-- Create a Navigation Menu -->
+
 </header>
 
-
-<main>
 <!-- Main Body -->
+<main>
     <div class="intro">
         <br><h2>Can you guess which film made more at the box office?<br><br>
             Choose a decade below and see how well you remember your movies!
@@ -34,6 +34,7 @@
     </div>
 
     <div class="main">
+
         <div class="container eighties">
             <h1><a href="1980s.html">1980's Movies</a></h1>
             <ul class="images-container">
@@ -75,9 +76,11 @@
                 <li><img src="img/Iron-Man.jpg" alt="Iron Man"></li>
             </ul>
         </div>
+        
     </div>
 </main>
 
+<!-- Footer -->
 <footer class="footer">
     <h3>&copy;2020 Eric's Movie Trivia Game</h3>
 </footer>
