Final Update; Changed display question/get user input method.  Added more questions

--- a/1990s.html
+++ b/1990s.html
@@ -27,18 +27,28 @@
    
 <!--Show user score here-->
 <summary>
-
+    <div class="intro">
+        <br><h2>Choose your answers<br><br>
+            Then click the submit button to see how many you got right!
+        </h2><br>
+    </div>
 </summary>
-    
+
 <!-- Main Body -->
 <main class="main-content">
-    
+
 </main>
+
+<section>
+    <div class="btn-container">
+        <a href="#"><button type="button" onclick="checkAnswersFunction()">Submit Your Answers!</button></a>
+    </div>
+</section>
 
 <!-- Footer -->
 <footer class="footer">
     <h3>&copy;2020 Eric's Movie Trivia Game</h3>
-</footer> 
+</footer>
 
 <script src="js/90s-movies.js"></script>
 
