code refactoring.  Reduced 6 check answer for loops down to 1

--- a/2000s.html
+++ b/2000s.html
@@ -39,6 +39,7 @@
 
 </main>
 
+<!-- Button Section -->
 <section>
     <div class="btn-container">
         <a href="#"><button type="button" onclick="checkAnswersFunction()">Submit Your Answers!</button></a>
@@ -50,7 +51,8 @@
     <h3>&copy;2020 Eric's Movie Trivia Game</h3>
 </footer>
 
+</body>
+
 <script src="js/00s-movies.js"></script>
 
-</body>
 </html>
