--- a/1980s.html
+++ b/1980s.html
@@ -22,7 +22,7 @@
 
 <!-- Create a background -->
 <header class="background">
-
+    
 </header>
 
 <!--Show user score here-->
@@ -39,6 +39,7 @@
 
 </main>
 
+<!-- Button Section -->
 <section>
     <div class="btn-container">
         <a href="#"><button type="button" onclick="checkAnswersFunction()">Submit Your Answers!</button></a>
@@ -50,7 +51,8 @@
     <h3>&copy;2020 Eric's Movie Trivia Game</h3>
 </footer>
 
+</body>
+
 <script src="js/80s-movies.js"></script>
 
-</body>
 </html>
