replace all floats with flexbox

--- a/index.html
+++ b/index.html
@@ -37,56 +37,56 @@
 
         <div class="container eighties">
             <h1><a href="1980s.html">1980's Movies</a></h1>
-            <ul class="images-container">
-                <li><img src="img/Airplane.jpeg" alt="Airplane!"></li>
-                <li><img src="img/The-Blues-Brothers.jpg" alt="The Blues Brothers"></li>
-                <li><img src="img/Raiders-Of-The-Lost-Ark.jpg" alt="Raiders Of The Lost Ark"></li>
-                <li><img src="img/Stripes.jpg" alt="Stripes"></li>
-                <li><img src="img/First-Blood.jpg" alt="First Blood"></li>
-                <li><img src="img/RockyIII.jpg" alt="Rocky III"></li>
-                <li><img src="img/Scarface.jpg" alt="Scarface"></li>
-                <li><img src="img/WarGames.jpg" alt="WarGames"></li>
-                <li><img src="img/The-Goonies.jpg" alt="The Goonies"></li>
-                <li><img src="img/Back-To-The-Future.jpg" alt="Back to the Future"></li>
-                <li><img src="img/Die-Hard.jpg" alt="Die Hard"></li>
-                <li><img src="img/Who-Framed-Roger-Rabbit.jpg" alt="Who Framed Roger Rabbit"></li>
-            </ul>
+            <div class="img-container">
+                <img src="img/Airplane.jpeg" alt="Airplane!">
+                <img src="img/The-Blues-Brothers.jpg" alt="The Blues Brothers">
+                <img src="img/Raiders-Of-The-Lost-Ark.jpg" alt="Raiders Of The Lost Ark">
+                <img src="img/Stripes.jpg" alt="Stripes">
+                <img src="img/First-Blood.jpg" alt="First Blood">
+                <img src="img/RockyIII.jpg" alt="Rocky III">
+                <img src="img/Scarface.jpg" alt="Scarface">
+                <img src="img/WarGames.jpg" alt="WarGames">
+                <img src="img/The-Goonies.jpg" alt="The Goonies">
+                <img src="img/Back-To-The-Future.jpg" alt="Back to the Future">
+                <img src="img/Die-Hard.jpg" alt="Die Hard">
+                <img src="img/Who-Framed-Roger-Rabbit.jpg" alt="Who Framed Roger Rabbit">
+            </div>
         </div>
 
         <div class="container nineties">
             <h1><a href="1990s.html">1990's Movies</a></h1>
-            <ul class="images-container">
-                <li><img src="img/Home-Alone.jpg" alt="Home Alone"></li>
-                <li><img src="img/Pretty-Woman.jpg" alt="Pretty Woman"></li>
-                <li><img src="img/Terminator-2.jpg" alt="Terminator 2: Judgment Day"></li>
-                <li><img src="img/Hook.jpg" alt="Hook"></li>
-                <li><img src="img/Waynes-World.jpeg" alt="Waynes World"></li>
-                <li><img src="img/A-Few-Good-Men.jpg" alt="A Few Good Men"></li>
-                <li><img src="img/Forrest-Gump.jpg" alt="Forrest Gump"></li>
-                <li><img src="img/The-Lion-King.jpg" alt="The Lion King"></li>
-                <li><img src="img/Jumanji.jpg" alt="Jumanji"></li>
-                <li><img src="img/Toy-Story.jpg" alt="Toy Story"></li>
-                <li><img src="img/The-Matrix.jpg" alt="The Matrix"></li>
-                <li><img src="img/The-Mummy.jpg" alt="The Mummy"></li>
-            </ul>
+            <div class="img-container">
+                <img src="img/Home-Alone.jpg" alt="Home Alone">
+                <img src="img/Pretty-Woman.jpg" alt="Pretty Woman">
+                <img src="img/Terminator-2.jpg" alt="Terminator 2: Judgment Day">
+                <img src="img/Hook.jpg" alt="Hook">
+                <img src="img/Waynes-World.jpeg" alt="Waynes World">
+                <img src="img/A-Few-Good-Men.jpg" alt="A Few Good Men">
+                <img src="img/Forrest-Gump.jpg" alt="Forrest Gump">
+                <img src="img/The-Lion-King.jpg" alt="The Lion King">
+                <img src="img/Jumanji.jpg" alt="Jumanji">
+                <img src="img/Toy-Story.jpg" alt="Toy Story">
+                <img src="img/The-Matrix.jpg" alt="The Matrix">
+                <img src="img/The-Mummy.jpg" alt="The Mummy">
+            </div>
         </div>
 
         <div class="container aughts">
             <h1><a href="2000s.html">2000's Movies</a></h1>
-            <ul class="images-container">
-                <li><img src="img/Gladiator.jpg" alt="Gladiator"></li>
-                <li><img src="img/Cast-Away.jpg" alt="Cast Away"></li>
-                <li><img src="img/HP-Stone.jpg" alt="Harry Potter and the Sorcerer's Stone"></li>
-                <li><img src="img/LOTR-Fellowship.jpg" alt="The Lord of the Rings: The Fellowship of the Ring"></li>
-                <li><img src="img/HP-Chamber.jpg" alt="Harry Potter and the Chamber of Secrets"></li>
-                <li><img src="img/LOTR-Two-Towers.jpg" alt="The Lord of the Rings: The Two Towers"></li>
-                <li><img src="img/Star-Wars-ROTS.jpg" alt="Star Wars: Episode III - Revenge of the Sith"></li>
-                <li><img src="img/Batman-Begins.jpg" alt="Batman Begins"></li>
-                <li><img src="img/Casino-Royale.jpg" alt="Casino Royale"></li>
-                <li><img src="img/The-Departed.jpg" alt="The Departed"></li>
-                <li><img src="img/The-Dark-Knight.jpg" alt="The Dark Knight"></li>
-                <li><img src="img/Iron-Man.jpg" alt="Iron Man"></li>
-            </ul>
+            <div class="img-container">
+                <img src="img/Gladiator.jpg" alt="Gladiator">
+                <img src="img/Cast-Away.jpg" alt="Cast Away">
+                <img src="img/HP-Stone.jpg" alt="Harry Potter and the Sorcerer's Stone">
+                <img src="img/LOTR-Fellowship.jpg" alt="The Lord of the Rings: The Fellowship of the Ring">
+                <img src="img/HP-Chamber.jpg" alt="Harry Potter and the Chamber of Secrets">
+                <img src="img/LOTR-Two-Towers.jpg" alt="The Lord of the Rings: The Two Towers">
+                <img src="img/Star-Wars-ROTS.jpg" alt="Star Wars: Episode III - Revenge of the Sith">
+                <img src="img/Batman-Begins.jpg" alt="Batman Begins">
+                <img src="img/Casino-Royale.jpg" alt="Casino Royale">
+                <img src="img/The-Departed.jpg" alt="The Departed">
+                <img src="img/The-Dark-Knight.jpg" alt="The Dark Knight">
+                <img src="img/Iron-Man.jpg" alt="Iron Man">
+            </div>
         </div>
         
     </div>
